@@ -20,4 +20,9 @@
  *
 */
 
+#ifndef _cimslp_h
+#define _cimslp_h
+
 void slpAgent();
+
+#endif
