@@ -19,6 +19,12 @@
  *
 */
 
+#ifndef _cimslpSLP_h
+#define _cimslpSLP_h
+
 char* buildAttrString(char * name, char * value, char * attrstring);
 char* buildAttrStringFromArray(char * name, char ** value, char * attrstring);
 int registerCIMService(cimSLPService css, int slpLifeTime);
+void deregisterCIMService();
+
+#endif
