@@ -123,7 +123,8 @@ typedef struct traceId {
 #define TRACE_MSGQUEUE          65536
 #define TRACE_XMLPARSING        131072  
 #define TRACE_RESPONSETIMING    262144       
-#define TRACE_DBPDAEMON         262144*2       
+#define TRACE_DBPDAEMON         524288
+#define TRACE_SLP               1048576
 
 typedef void sigHandler(int);
 
